added UIC homepage picture

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>654253204</h1>
+    <img src="https://www.uic.edu/_assets/65698862d6d915088c5b4514f0d56094.jpg" alt="UIC Picture">
 </body>
 </html>
